# aqi-eco-stats

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/fetch_data/: Cargo.toml
backend/fetch_data/src/: lib.rs
backend/json_structs/src/: lib.rs
backend/lambda_fetch_and_store/: Cargo.toml
backend/store_data/: Cargo.toml
fetch_data/: Cargo.toml
fetch_data/src/: json_structs.rs  lib.rs
infra/: infra.yml
json_structs/: Cargo.toml
json_structs/src/: lib.rs
scripts/: create_dynamodb.sh  deploy.sh  docker-compose.yml  run_local.sh
store_data/src/: lib.rs
test_app/: Cargo.toml
test_app/src/: main.rs
