[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fetch_data = { path = "../fetch_data" }
lambda_runtime = "0.10.0"
mockall_double = "0.3.1"
reqwest = "0.12.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
mockall = "0.12.1"
serial_test = "3.0.0"
