[package]
name = "lambda_fetch_and_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fetch_data = { path = "../fetch_data" }
json_structs = { path = "../json_structs" }
store_data = { path = "../store_data" }
lambda_runtime = "0.11.1"
reqwest = "0.12.1"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
mockall = "0.12.1"
serial_test = "3.0.0"
