[package]
name = "store_data"
version = "0.1.0"
edition = "2021"

[dependencies]
json_structs = { path = "../json_structs" }
aws-config = "1.1.8"
aws-sdk-dynamodb = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
anyhow = "1.0.81"
async-trait = "0.1.79"

[dev-dependencies]
mockall = "0.12.1"
